--- a/src/app/admin/nav/nav.component.html
+++ b/src/app/admin/nav/nav.component.html
@@ -28,6 +28,15 @@
                     </li>
                 </ul>
             </li>
+            <li nz-submenu nzOpen nzTitle="Fichas" nzIcon="file-text">
+                <ul>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="fichas/lista">Listar</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="fichas/crear">Crear</a>
+                    </li>
+                </ul>
             <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
