--- a/src/app/admin/clientes/components/listar-cliente/listar-cliente.component.html
+++ b/src/app/admin/clientes/components/listar-cliente/listar-cliente.component.html
@@ -1,1 +1,36 @@
-<p>listar-cliente works!</p>
+<h1>Lista de Clientes</h1>
+<hr>
+
+<nz-spin [nzSpinning]="!paginaCargada" [nzTip]="'Cargando vehículos...'">
+</nz-spin>
+
+<div nz-row *ngIf="paginaCargada">
+    <nz-table nz-col #tablaClientes [nzData]="clientes" [nzBordered]="true"
+        [nzScroll]="isSmallScreen ? { x: '1000px' } : {}">
+        <thead>
+            <tr>
+                <th>Cédula</th>
+                <th>Nombres</th>
+                <th>Apellidos</th>
+                <th>Correo E.</th>
+                <th>Celular</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor=" let cliente of tablaClientes.data">
+                <td>{{ cliente.usuario.cedula }}</td>
+                <td>{{ cliente.usuario.nombres }}</td>
+                <td>{{ cliente.usuario.apellido_p + ' ' + cliente.usuario.apellido_m }}</td>
+                <td>{{ cliente.usuario.correo_electronico }}</td>
+                <td>{{ cliente.usuario.celular }}</td>
+                <td>
+                    <button nz-button nzType="primary" nzSize="small" routerLink="">Editar</button>
+                    <button nz-button nzType="primary" nzDanger nzSize="small"
+                        (click)="deleteUsuario()">Eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+    </nz-table>
+
+</div>
