--- a/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.html
+++ b/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.html
@@ -1,1 +1,156 @@
-<p>crear-ficha works!</p>
+<h1>Crear Ficha</h1>
+<hr>
+
+<nz-spin [nzSpinning]="!paginaCargada" [nzTip]="'Cargando formulario...'">
+</nz-spin>
+
+<form nz-form nzLayout="vertical" [formGroup]="formularioFicha" *ngIf="paginaCargada">
+    <nz-form-item>
+        <nz-form-label nzRequired>
+            Cliente
+        </nz-form-label>
+        <nz-form-control [nzErrorTip]="clienteErrorTpl">
+            <nz-select nzShowSearch nzAllowClear formControlName="id_cliente" nzPlaceHolder="Selecciona un cliente">
+                <nz-option *ngFor="let cliente of clientes"
+                    [nzLabel]="cliente.usuario.nombres + ' ' + cliente.usuario.apellido_p"
+                    [nzValue]="cliente.id_cliente">
+                </nz-option>
+            </nz-select>
+            <ng-template #clienteErrorTpl let-control>
+                @if (control.errors?.['required']){
+                Selecciona un cliente
+                }
+            </ng-template>
+        </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+        <nz-form-label nzRequired>
+            Vehículo
+        </nz-form-label>
+        <nz-form-control [nzErrorTip]="vehiculoErrorTpl">
+            <nz-select nzShowSearch nzAllowClear formControlName="id_vehiculo" nzPlaceHolder="Selecciona un vehículo">
+                <nz-option *ngFor="let vehiculo of vehiculos" [nzLabel]="vehiculo.placa"
+                    [nzValue]="vehiculo.id_vehiculo">
+                </nz-option>
+            </nz-select>
+            <ng-template #vehiculoErrorTpl let-control>
+                @if (control.errors?.['required']){
+                Selecciona un vehículo
+                }
+            </ng-template>
+        </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+        <nz-form-label nzRequired>
+            Reparaciones
+        </nz-form-label>
+        <nz-form-control>
+            <nz-transfer [nzDataSource]="listaReparacionesTransfer" nzShowSearch [nzFilterOption]="filterOption"
+                [nzListStyle]="{ 'width.px': 270, 'height.px': 300 }" (nzChange)="cambioTransfer($event)"
+                [nzDisabled]="desactivarTransfer"></nz-transfer>
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <button nz-button nzType="primary" (click)="generaCamposTransfer()" [disabled]="desactivarGenerarCampos">Guadar
+            Reparaciones</button>
+    </nz-form-item>
+
+    <!-- @for (item of nombreControl; track $index) {
+    <nz-form-item>
+        <nz-form-label nzRequired>
+            {{ this.labelControl[$index] + '' + $index}}
+        </nz-form-label>
+        <nz-form-control [nzErrorTip]="nombreControlErrorTpl">
+            <input nz-input formControlName="{{ item }}" />
+            <ng-template #nombreControlErrorTpl let-control>
+                @if (control.errors?.['required']){
+                Ingresa el valor en {{ this.labelControl[$index] }}
+                }
+                @else if (control.errors?.['pattern']) {
+                Ingresa un valor válido en {{ this.labelControl[$index] }}
+                }
+            </ng-template>
+        </nz-form-control>
+    </nz-form-item>
+    } -->
+
+    <!-- <div *ngIf="mostarCampos">
+        @for(label of labelControl; track $index) {
+        <nz-form-item>
+            <nz-form-label>
+                {{ label }}
+            </nz-form-label>
+            <nz-form-control nzErrorTip="Verifica los valores introducidos...">
+                @if (label === 'CAMBIO DE RULIMANES DE RUEDA') {
+                <input nz-input formControlName="{{ nombreControl[$index] }}" />
+                }
+                @else {
+                <nz-input-group>
+
+                    <input nz-input formControlName="{{ nombreControl[$index * 2] }}" placeholder="Kilometraje Act.">
+
+                    <input nz-input formControlName="{{ nombreControl[$index * 2 + 1] }}"
+                        placeholder="Kilometraje Sig.">
+
+
+                </nz-input-group>
+                }
+            </nz-form-control>
+        </nz-form-item>
+        }
+    </div> -->
+
+    <div *ngIf="mostarCampos">
+        @for(label of labelControl; track $index) {
+        <nz-form-item>
+            <nz-form-label>
+                {{ label }}
+            </nz-form-label>
+            <nz-form-control>
+                @if (label === 'CAMBIO DE RULIMANES DE RUEDA') {
+
+                <nz-select nzMode="tags" nzPlaceHolder="Selecciones las ruedas"
+                    formControlName="{{ nombreControl[$index] }}">
+                    <nz-option nzValue="DI" nzLabel="DL"></nz-option>
+                    <nz-option nzValue="DD" nzLabel="DD"></nz-option>
+                    <nz-option nzValue="TI" nzLabel="TI"></nz-option>
+                    <nz-option nzValue="TD" nzLabel="TD"></nz-option>
+                </nz-select>
+                }
+
+                @else {
+                <nz-input-group>
+
+                    <input nz-input formControlName="{{ nombreControl[$index * 2] }}" placeholder="Kilometraje Act.">
+
+                    <input nz-input formControlName="{{ nombreControl[$index * 2 + 1] }}"
+                        placeholder="Kilometraje Sig.">
+
+
+                </nz-input-group>
+
+                <div
+                    *ngIf="formularioFicha.controls[nombreControl[$index * 2]].dirty && formularioFicha.controls[nombreControl[$index * 2]].errors">
+                    <p *ngIf="formularioFicha.controls[nombreControl[$index * 2]].errors?.['required']">El campo no
+                        puede estar vacio</p>
+                    <p *ngIf="formularioFicha.controls[nombreControl[$index * 2]].errors?.['pattern']">El campo debe ser
+                        un numero</p>
+                </div>
+                <div
+                    *ngIf="formularioFicha.controls[nombreControl[$index * 2 + 1]].dirty && formularioFicha.controls[nombreControl[$index * 2 + 1]].errors">
+                    <p *ngIf="formularioFicha.controls[nombreControl[$index * 2 + 1]].errors?.['required']">El campo no
+                        puede estar vacio</p>
+                    <p *ngIf="formularioFicha.controls[nombreControl[$index * 2 + 1]].errors?.['pattern']">El campo debe
+                        ser un numero</p>
+                </div>
+
+                }
+            </nz-form-control>
+        </nz-form-item>
+        }
+    </div>
+
+
+</form>
