ANtes de agregar editar

--- a/src/app/admin/clientes/components/crear-cliente/crear-cliente.component.html
+++ b/src/app/admin/clientes/components/crear-cliente/crear-cliente.component.html
@@ -100,7 +100,7 @@
 
     <nz-form-item>
         <nz-form-control>
-            <button nz-button nzType="primary" [disabled]="!formularioCliente.valid">
+            <button nz-button nzType="primary" [disabled]="!formularioCliente.valid" [nzLoading]="status === 'loading'">
                 Crear Cliente
             </button>
 
