--- a/src/app/admin/nav/nav.component.html
+++ b/src/app/admin/nav/nav.component.html
@@ -2,8 +2,9 @@
     <nz-sider class="menu-sidebar" nzCollapsible nzWidth="256px" nzBreakpoint="md" [(nzCollapsed)]="isCollapsed"
         [nzTrigger]="null">
         <div class="sidebar-logo">
-            <a>
+            <a routerLink="">
                 <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+
                 <h1>Mecánica Espinoza</h1>
             </a>
         </div>
@@ -35,6 +36,13 @@
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="fichas/crear">Crear</a>
+                    </li>
+                </ul>
+            </li>
+            <li nz-submenu nzOpen nzTitle="Sesión" nzIcon="lock">
+                <ul>
+                    <li nz-menu-item nzMatchRouter>
+                        <a (click)="logout()">Cerrar Sesión</a>
                     </li>
                 </ul>
             </li>
