--- a/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.html
@@ -12,7 +12,7 @@
         <nz-form-control [nzErrorTip]="clienteErrorTpl">
             <nz-select formControlName="id_cliente" nzPlaceHolder="Selecciona un cliente" nzShowSearch>
                 <nz-option *ngFor="let cliente of clientes"
-                    [nzLabel]="cliente.usuario.nombres + ' ' + cliente.usuario.apellido_p"
+                    [nzLabel]="cliente.usuario.nombres + ' ' + cliente.usuario.apellido_p + ' ' + cliente.usuario.apellido_m"
                     [nzValue]="cliente.id_cliente">
                 </nz-option>
             </nz-select>
