--- a/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.html
@@ -1,40 +1,46 @@
 <h1>Lista de Vehículos</h1>
-<hr>
+<hr />
 
-<nz-spin [nzSpinning]="!paginaCargada" [nzTip]="'Cargando vehículos...'">
+<nz-spin [nzSpinning]="!paginaCargada" [nzTip]="'Cargando...'">
 </nz-spin>
 
-<div nz-row *ngIf="paginaCargada">
-    <nz-table nz-col #tablaVehiculos [nzData]="vehiculos" [nzBordered]="true"
-        [nzScroll]="isSmallScreen ? { x: '1000px' } : {}">
-        <thead>
-            <tr>
-                <th>Cédula</th>
-                <th>Cliente</th>
-                <th>Placa</th>
-                <th>Marca</th>
-                <th>Modelo</th>
-                <th>Chasis</th>
-                <th>Motor</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor=" let vehiculo of tablaVehiculos.data">
-                <td>{{ vehiculo.cliente.usuario.cedula }}</td>
-                <td>{{ vehiculo.cliente.usuario.nombres + ' ' + vehiculo.cliente.usuario.apellido_p }}</td>
-                <td>{{ vehiculo.placa }}</td>
-                <td>{{ vehiculo.marca }}</td>
-                <td>{{ vehiculo.modelo }}</td>
-                <td>{{ vehiculo.chasis }}</td>
-                <td>{{ vehiculo.motor }}</td>
-                <td>
-                    <button nz-button nzType="primary" nzSize="small" routerLink="">Editar</button>
-                    <button nz-button nzType="primary" nzDanger nzSize="small"
-                        (click)="deleteVehiculo(vehiculo.id_vehiculo)">Eliminar</button>
-                </td>
-            </tr>
-        </tbody>
-    </nz-table>
 
+<nz-select nzShowSearch nzAllowClear nzPlaceHolder="Selecciona un cliente" [(ngModel)]="idCliente"
+    (ngModelChange)="getVehiculosCliente()" *ngIf="clientes.length !== 0">
+    <nz-option *ngFor="let cliente of clientes"
+        [nzLabel]="cliente.usuario.nombres + ' ' + cliente.usuario.apellido_p + ' ' + cliente.usuario.apellido_m"
+        [nzValue]="cliente.id_cliente">
+    </nz-option>
+</nz-select>
+
+<div *ngIf="paginaCargada">
+    <div nz-row>
+        <nz-table nz-col #tablaVehiculos [nzData]="vehiculos" [nzBordered]="true"
+            [nzScroll]="isSmallScreen ? { x: '1000px' } : {}">
+            <thead>
+                <tr>
+                    <th>Placa</th>
+                    <th>Marca</th>
+                    <th>Modelo</th>
+                    <th>Chasis</th>
+                    <th>Motor</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let vehiculo of tablaVehiculos.data">
+                    <td>{{ vehiculo.placa }}</td>
+                    <td>{{ vehiculo.marca }}</td>
+                    <td>{{ vehiculo.modelo }}</td>
+                    <td>{{ vehiculo.chasis }}</td>
+                    <td>{{ vehiculo.motor }}</td>
+                    <td>
+                        <button nz-button nzType="primary" nzSize="small" (click)="editVehiculo(vehiculo.id_vehiculo)">
+                            Editar
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </nz-table>
+    </div>
 </div>
