Commit de madrugada 07/07/2024

--- a/src/app/admin/clientes/components/crear-cliente/crear-cliente.component.scss
+++ b/src/app/admin/clientes/components/crear-cliente/crear-cliente.component.scss
@@ -14,8 +14,10 @@
     }
 }
 
-button {
-    margin-left: 5px;
+nz-form-control {
+    button:last-child {
+        margin-left: 5px;
+    }
 }
 
 nz-form-label {
