--- a/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
+++ b/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
@@ -19,8 +19,10 @@
     }
 }
 
-button {
-    margin-left: 5px;
+nz-form-control {
+    button:last-child {
+        margin-left: 5px;
+    }
 }
 
 nz-form-label {
