--- a/src/app/admin/nav/nav.component.html
+++ b/src/app/admin/nav/nav.component.html
@@ -3,7 +3,7 @@
         [nzTrigger]="null">
         <div class="sidebar-logo">
             <a routerLink="">
-                <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+                <img src="assets/images/logo_2.svg" alt="logo">
 
                 <h1>Mecánica Espinoza</h1>
             </a>
