--- a/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.html
@@ -109,8 +109,8 @@
                 Guardar Vehículo
             </button>
 
-            <button nz-button>
-                <a routerLink="../../lista">Cancelar</a>
+            <button nz-button (click)="cancelar()">
+                Cancelar
             </button>
         </nz-form-control>
     </nz-form-item>
