--- a/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.scss
+++ b/src/app/admin/vehiculos/components/crear-vehiculo/crear-vehiculo.component.scss
@@ -14,8 +14,10 @@
     }
 }
 
-button {
-    margin-left: 5px;
+nz-form-control {
+    button:last-child {
+        margin-left: 5px;
+    }
 }
 
 nz-form-label {
